Fix sprites not loading on Safari

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
-
 html, body {
   margin: 0;
   background-color: #252525;
@@ -86,16 +84,16 @@ html, body {
 }
 
 .sprite {
-  min-height: 100%;
-  aspect-ratio: 1;
-  background-size: cover;
+  margin: 0;
+  height: 100%;
+  width: auto;
 }
 
 .found {
   filter: brightness(50%);
 }
 
-img {
+#background {
   margin-top: min(80px, 15vmin);
   width: 100%;
 }
